[package]
name = "block_feeder"
version = "0.1.0"
edition = "2024"

[dependencies]
# redis
redis = { version = "0.32", features = ["tokio-comp"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread"
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
bincode = "=1.3.3"
anyhow = "1.0.86"
clap = { version = "4.3.21", features = ["derive"] }

